apps/base/obsidian/obsidian-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian-ingressroute
  namespace: obsidian
  annotations:
    gethomepage.dev/href: "https://obsidian.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Obsidian"
    gethomepage.dev/description: "Obsidian"
    gethomepage.dev/app: obsidian
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "sh-obsidian.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`obsidian.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: obsidian
          port: 3000
          scheme: http
  tls: {}
